Update ESLint to extend personal configuration

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,14 +1,10 @@
 {
-	"extends": "wpcalypso",
+	"extends": "@aduth/eslint-config/es5",
 	"env": {
 		"node": true,
 		"mocha": true
 	},
 	"parserOptions": {
 		"ecmaVersion": 5
-	},
-	"rules": {
-		"no-var": "off",
-		"strict": "off"
 	}
 }
