--- a/package.json
+++ b/package.json
@@ -29,9 +29,9 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "eslint": "^3.12.2",
-    "eslint-config-wpcalypso": "^0.6.0",
-    "eslint-plugin-wpcalypso": "^3.0.2",
+    "@aduth/eslint-config": "^2.0.0",
+    "eslint": "^4.18.0",
+    "eslint-plugin-jsdoc": "^3.4.1",
     "mocha": "^3.2.0",
     "sinon": "^1.17.6",
     "uglify-js": "^2.7.5"
