--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "url": "https://github.com/aduth/refx.git"
   },
   "files": [
-    "refx.js"
+    "refx.js",
+    "refx.min.js"
   ],
   "scripts": {
     "minify": "uglifyjs refx.js -c -m > refx.min.js",
