--- a/package.json
+++ b/package.json
@@ -9,12 +9,13 @@
   },
   "files": [
     "refx.js",
-    "refx.min.js"
+    "dist"
   ],
   "scripts": {
-    "minify": "uglifyjs refx.js -c -m > refx.min.js",
-    "build": "npm run minify",
-    "lint": "eslint refx.js test/refx.js",
+    "build": "rollup -c",
+    "postbuild": "npm run minify",
+    "minify": "uglifyjs dist/refx.js -c -m > dist/refx.min.js",
+    "lint": "eslint src test",
     "test": "mocha && npm run lint",
     "prepublishOnly": "npm test && npm run build"
   },
@@ -34,6 +35,7 @@
     "eslint": "^4.18.0",
     "eslint-plugin-jsdoc": "^3.4.1",
     "mocha": "^3.2.0",
+    "rollup": "^0.56.1",
     "sinon": "^1.17.6",
     "uglify-js": "^2.7.5"
   }
