--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -1,11 +1,21 @@
 {
-	"extends": "@aduth/eslint-config/es5",
+	"plugins": [ "es" ],
+	"extends": [
+		"@aduth/eslint-config/es5",
+		"plugin:es/no-2018",
+		"plugin:es/no-2017",
+		"plugin:es/no-2016",
+		"plugin:es/no-2015"
+	],
 	"env": {
 		"node": true,
 		"mocha": true
 	},
 	"parserOptions": {
-		"ecmaVersion": 5,
+		"ecmaVersion": 2015,
 		"sourceType": "module"
+	},
+	"rules": {
+		"es/no-modules": "off"
 	}
 }
