--- a/package.json
+++ b/package.json
@@ -32,12 +32,13 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@aduth/eslint-config": "^2.0.0",
-    "eslint": "^4.18.0",
-    "eslint-plugin-jsdoc": "^3.4.1",
-    "mocha": "^3.2.0",
-    "rollup": "^0.56.1",
-    "sinon": "^1.17.6",
-    "uglify-js": "^2.7.5"
+    "@aduth/eslint-config": "^3.0.0",
+    "eslint": "^6.6.0",
+    "eslint-plugin-es": "^2.0.0",
+    "eslint-plugin-jsdoc": "^17.1.1",
+    "mocha": "^6.2.2",
+    "rollup": "^1.26.3",
+    "sinon": "^7.5.0",
+    "uglify-js": "^3.6.8"
   }
 }
