--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "build": "rollup -c",
     "postbuild": "npm run minify",
-    "minify": "uglifyjs dist/refx.js -c -m > dist/refx.min.js",
+    "minify": "terser dist/refx.js -c -m > dist/refx.min.js",
     "lint": "eslint src test",
     "pretest": "npm run build",
     "test": "mocha && npm run lint",
@@ -33,12 +33,10 @@
   "license": "MIT",
   "devDependencies": {
     "@aduth/eslint-config": "^3.0.0",
-    "eslint": "^6.6.0",
-    "eslint-plugin-es": "^2.0.0",
-    "eslint-plugin-jsdoc": "^17.1.1",
-    "mocha": "^6.2.2",
-    "rollup": "^1.26.3",
-    "sinon": "^7.5.0",
-    "uglify-js": "^3.6.8"
+    "eslint": "^7.28.0",
+    "eslint-plugin-jsdoc": "^35.1.3",
+    "mocha": "^9.0.0",
+    "rollup": "^2.51.2",
+    "sinon": "^11.1.1"
   }
 }
