--- a/package.json
+++ b/package.json
@@ -32,9 +32,11 @@
   },
   "license": "MIT",
   "devDependencies": {
-    "@aduth/eslint-config": "^3.0.0",
+    "@aduth/eslint-config": "^4.0.1",
     "eslint": "^7.28.0",
-    "eslint-plugin-jsdoc": "^35.1.3",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-jsdoc": "^35.2.0",
+    "eslint-plugin-prettier": "^3.4.0",
     "mocha": "^9.0.0",
     "rollup": "^2.51.2",
     "sinon": "^11.1.1"
