--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "mocha": "^9.0.0",
     "rollup": "^2.51.2",
-    "sinon": "^11.1.1"
+    "sinon": "^11.1.1",
+    "terser": "^5.7.0"
   }
 }
