--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "eslint-plugin-jsdoc": "^35.2.0",
     "eslint-plugin-prettier": "^3.4.0",
     "mocha": "^9.0.0",
+    "prettier": "^2.3.1",
     "rollup": "^2.51.2",
     "sinon": "^11.1.1",
     "terser": "^5.7.0"
